tests/valid/testcase06.c
// valid casting int -> char

int main(void){
    int x;
    char y;
    x = 55;
    y = (char) x;
}