tests/semantic_errors/testcase04.c
// missing main, case sensitive

int MAIN(void) {
    
}